Fixed icons in the forced dark mode.

--- a/css/dashboards.css
+++ b/css/dashboards.css
@@ -157,6 +157,14 @@
 }
 /* stylelint-enable max-line-length */
 
+.highcharts-dark .highcharts-dashboards-edit-sidebar-title {
+    filter: brightness(0) invert(1);
+}
+
+.highcharts-dark .highcharts-dashboards-edit-menu .highcharts-dashboards-edit-toolbar-item div {
+    filter: brightness(0) invert(1);
+}
+
 .highcharts-dashboards,
 .highcharts-dashboards-wrapper {
     background-color: var(--highcharts-neutral-color-5);
